--- a/calc.html
+++ b/calc.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <link rel="stylesheet" type="text/css" href="calculator.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 
+<div class="container">
+    <div id="calc" class="row">
+        <table id="buttons" class="col-md-4">
+            <tr>
+                <th><button class="btn b1">7</button></th>
+                <th><button class="btn b1">8</button></th>
+                <th><button class="btn b1">9</button></th>
+            </tr>
+            <tr>
+                <th><button class="btn b1">6</button></th>
+                <th><button class="btn b1">5</button></th>
+                <th><button class="btn b1">4</button></th>
+            </tr>
+            <tr>
+                <th><button class="btn b1">3</button></th>
+                <th><button class="btn b1">2</button></th>
+                <th><button class="btn b1">1</button></th>
+            </tr>
+        </table>
+    </div>
+</div>
+
+
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
