updated user interface

--- a/calc.html
+++ b/calc.html
@@ -10,23 +10,40 @@
 
 <div class="container">
     <div id="calc" class="row">
-        <table id="buttons" class="col-md-4">
-            <tr>
-                <th><button class="btn b1">7</button></th>
-                <th><button class="btn b1">8</button></th>
-                <th><button class="btn b1">9</button></th>
-            </tr>
-            <tr>
-                <th><button class="btn b1">6</button></th>
-                <th><button class="btn b1">5</button></th>
-                <th><button class="btn b1">4</button></th>
-            </tr>
-            <tr>
-                <th><button class="btn b1">3</button></th>
-                <th><button class="btn b1">2</button></th>
-                <th><button class="btn b1">1</button></th>
-            </tr>
-        </table>
+
+        <div>
+            <h2 id="text">44</h2>
+            <h6 id="textSmall">small</h6>
+        </div>
+
+        <div>
+            <button class="btn b1">7</button>
+            <button class="btn b1">8</button>
+            <button class="btn b1">9</button>
+            <button class="btn b1">C</button>
+        </div>
+
+        <div>
+            <button class="btn b1">4</button>
+            <button class="btn b1">5</button>
+            <button class="btn b1">6</button>
+            <button class="btn b1">*</button>
+        </div>
+
+        <div>
+            <button class="btn b1">1</button>
+            <button class="btn b1">2</button>
+            <button class="btn b1">3</button>
+            <button class="btn b1">÷</button>
+        </div>
+
+        <div>
+            <button class="btn b1">0</button>
+            <button class="btn b1">.</button>
+            <button class="btn b1">-</button>
+            <button class="btn b1">+</button>
+        </div>
+
     </div>
 </div>
 
