updated user interface

--- a/calc.html
+++ b/calc.html
@@ -20,7 +20,7 @@
             <button class="btn b1">7</button>
             <button class="btn b1">8</button>
             <button class="btn b1">9</button>
-            <button class="btn b1">C</button>
+            <button id="clear" class="btn b1">C</button>
         </div>
 
         <div>
@@ -39,9 +39,14 @@
 
         <div>
             <button class="btn b1">0</button>
-            <button class="btn b1">.</button>
-            <button class="btn b1">-</button>
-            <button class="btn b1">+</button>
+            <button id="decimal" class="btn b1">.</button>
+            <button id="minus" class="btn b1">-</button>
+            <button id="add" class="btn b1">+</button>
+        </div>
+
+        <div>
+            <button id="plusMinus" class="btn b1">±</button>
+            <button id="submit" class="btn b1">=</button>
         </div>
 
     </div>
