--- a/calc.html
+++ b/calc.html
@@ -12,47 +12,55 @@
     <div id="calc" class="row">
 
         <div>
-            <h2 id="text">44</h2>
-            <h6 id="textSmall">small</h6>
+            <h2 id="text">0</h2>
+            <h6 id="textSmall">0</h6>
         </div>
 
         <div>
-            <button class="btn b1">7</button>
-            <button class="btn b1">8</button>
-            <button class="btn b1">9</button>
+            <button id="seven" class="btn b1">7</button>
+            <button id="eight" class="btn b1">8</button>
+            <button id="nine" class="btn b1">9</button>
             <button id="clear" class="btn b1">C</button>
         </div>
 
         <div>
-            <button class="btn b1">4</button>
-            <button class="btn b1">5</button>
-            <button class="btn b1">6</button>
-            <button class="btn b1">*</button>
+            <button id="four" class="btn b1">4</button>
+            <button id="five" class="btn b1">5</button>
+            <button id="six" class="btn b1">6</button>
+            <button id="multiply" class="btn b1">*</button>
+            <button id="plusMinus" class="btn b1">±</button>
         </div>
 
         <div>
-            <button class="btn b1">1</button>
-            <button class="btn b1">2</button>
-            <button class="btn b1">3</button>
-            <button class="btn b1">÷</button>
+            <button id="one" class="btn b1">1</button>
+            <button id="two" class="btn b1">2</button>
+            <button id="three" class="btn b1">3</button>
+            <button id="divide" class="btn b1">÷</button>
+
         </div>
 
         <div>
-            <button class="btn b1">0</button>
+            <button id="zero" class="btn b1">0</button>
             <button id="decimal" class="btn b1">.</button>
             <button id="minus" class="btn b1">-</button>
             <button id="add" class="btn b1">+</button>
-        </div>
-
-        <div>
-            <button id="plusMinus" class="btn b1">±</button>
             <button id="submit" class="btn b1">=</button>
         </div>
 
+        <div>
+
+        </div>
     </div>
+
+
 </div>
 
-
+<script
+        src="https://code.jquery.com/jquery-3.2.1.js"
+        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+        crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="calc.js"></script>
+
 </body>
 </html>
