--- a/calc.html
+++ b/calc.html
@@ -16,42 +16,36 @@
             <h6 id="textSmall">0</h6>
         </div>
 
-        <div>
-            <button id="seven" class="btn b1">7</button>
-            <button id="eight" class="btn b1">8</button>
-            <button id="nine" class="btn b1">9</button>
-            <button id="clear" class="btn b1">C</button>
-        </div>
-
-        <div>
-            <button id="four" class="btn b1">4</button>
-            <button id="five" class="btn b1">5</button>
-            <button id="six" class="btn b1">6</button>
-            <button id="multiply" class="btn b1">*</button>
-            <button id="plusMinus" class="btn b1">±</button>
-        </div>
-
-        <div>
-            <button id="one" class="btn b1">1</button>
-            <button id="two" class="btn b1">2</button>
-            <button id="three" class="btn b1">3</button>
-            <button id="divide" class="btn b1">÷</button>
-
-        </div>
-
-        <div>
-            <button id="zero" class="btn b1">0</button>
-            <button id="decimal" class="btn b1">.</button>
-            <button id="minus" class="btn b1">-</button>
-            <button id="add" class="btn b1">+</button>
-            <button id="submit" class="btn b1">=</button>
-        </div>
-
-        <div>
-
-        </div>
-    </div>
-
+        <table id="table">
+            <tr>
+                <td id="plusMinus" class="inputs">±</td>
+                <td id="clear" class="inputs" colspan="4">C</td>
+            </tr>
+            <tr>
+                <td id="seven" class="inputs">7</td>
+                <td id="eight" class="inputs">8</td>
+                <td id="nine" class="inputs">9</td>
+                <td id="divide" class="inputs">÷</td>
+            </tr>
+            <tr>
+                <td id="four" class="inputs">4</td>
+                <td id="five" class="inputs">5</td>
+                <td id="six" class="inputs">6</td>
+                <td id="multiply" class="inputs">*</td>
+            </tr>
+            <tr>
+                <td id="one" class="inputs">1</td>
+                <td id="two" class="inputs">2</td>
+                <td id="three" class="inputs">3</td>
+                <td id="subtract" class="inputs">-</td>
+            </tr>
+            <tr>
+                <td id="zero" class="inputs" colspan="2">0</td>
+                <td id="decimal" class="inputs">.</td>
+                <td id="add" class="inputs">+</td>
+                <td id="submit" class="inputs" rowspan="4">=</td>
+            </tr>
+        </table>
 
 </div>
 
