--- a/calc.html
+++ b/calc.html
@@ -25,7 +25,7 @@
                 <td id="seven" class="inputs">7</td>
                 <td id="eight" class="inputs">8</td>
                 <td id="nine" class="inputs">9</td>
-                <td id="divide" class="inputs">÷</td>
+                <td id="divide" class="inputs">/</td>
             </tr>
             <tr>
                 <td id="four" class="inputs">4</td>
