updated javascript and user interface

--- a/calc.html
+++ b/calc.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<div id="title">
+    <h1>Javascript Calculator</h1>
+</div>
+
 <div class="container">
     <div id="calc" class="row">
 
